--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -409,7 +409,9 @@ commands:
           environment:
             APPLICATION: '<< parameters.application >>'
             DB_PASSWORD: mysecretpassword
+            DB_PASSWORD_LOW_PRIV: mysecretpassword
             DB_USER: postgres
+            DB_USER_LOW_PRIV: crud
             DB_HOST: localhost
             DB_PORT_TEST: 5433
             DB_PORT: 5432
@@ -777,9 +779,11 @@ jobs:
             DB_NAME: test_db
             DB_NAME_TEST: test_db
             DB_PASSWORD: mysecretpassword
+            DB_PASSWORD_LOW_PRIV: mysecretpassword
             DB_PORT: 5432
             DB_PORT_TEST: 5432
             DB_USER: postgres
+            DB_USER_LOW_PRIV: crud
       - announce_failure
 
   # `build_tools` builds the mymove-specific CLI tools in `mymove/cmd`
