--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1368,7 +1368,7 @@ workflows:
             - build_migrations
           filters:
             branches:
-              only: cj-deploy-master-to-exp
+              only: placeholder_branch_name
 
       - push_tasks_exp:
           requires:
@@ -1396,25 +1396,46 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: cj-deploy-master-to-exp
+              only: placeholder_branch_name
 
       - deploy_exp_tasks:
           requires:
-            - deploy_exp_migrations
+            - pre_deps_golang
+            - pre_test
+            - client_test
+            - server_test
+            - push_app_exp
+            - build_tools
+            - push_tasks_exp
+            - push_migrations_exp
           filters:
             branches:
               only: cj-deploy-master-to-exp
 
       - deploy_exp_app:
           requires:
-            - deploy_exp_migrations
+            - pre_deps_golang
+            - pre_test
+            - client_test
+            - server_test
+            - push_app_exp
+            - build_tools
+            - push_tasks_exp
+            - push_migrations_exp
           filters:
             branches:
               only: cj-deploy-master-to-exp
 
       - deploy_exp_app_client_tls:
           requires:
-            - deploy_exp_migrations
+            - pre_deps_golang
+            - pre_test
+            - client_test
+            - server_test
+            - push_app_exp
+            - build_tools
+            - push_tasks_exp
+            - push_migrations_exp
           filters:
             branches:
               only: cj-deploy-master-to-exp
