--- a/config/env/prd.migrations.env
+++ b/config/env/prd.migrations.env
@@ -3,4 +3,5 @@ DB_NAME=app
 DB_PORT=5432
 DB_RETRY_INTERVAL=5s
 DB_SSL_MODE=verify-full
+DB_USER=ecs_user
 MIGRATION_MANIFEST=/migrate/migrations_manifest.txt
