--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1361,28 +1361,28 @@ workflows:
             - build_app
           filters:
             branches:
-              only: cj-crud-exp
+              only: placeholder_branch_name
 
       - push_migrations_exp:
           requires:
             - build_migrations
           filters:
             branches:
-              only: cj-crud-exp
+              only: placeholder_branch_name
 
       - push_tasks_exp:
           requires:
             - build_tasks
           filters:
             branches:
-              only: cj-crud-exp
+              only: placeholder_branch_name
 
       - push_webhook_client_exp:
           requires:
             - build_webhook_client
           filters:
             branches:
-              only: cj-crud-exp
+              only: placeholder_branch_name
 
       - deploy_exp_migrations:
           requires:
@@ -1396,28 +1396,28 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: cj-crud-exp
+              only: placeholder_branch_name
 
       - deploy_exp_tasks:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: cj-crud-exp
+              only: placeholder_branch_name
 
       - deploy_exp_app:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: cj-crud-exp
+              only: placeholder_branch_name
 
       - deploy_exp_app_client_tls:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: cj-crud-exp
+              only: placeholder_branch_name
 
       - push_app_stg:
           requires:
