run acceptance tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1343,7 +1343,7 @@ workflows:
             - pre_deps_golang
           filters:
             branches:
-              only: placeholder_branch_name
+              only: cj-re-add-ac-testing
 
       - integration_tests:
           requires:
